--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,40 +1,41 @@
-    name: Deploy
-    
-    on:
-      push:
-        branches:
-          - main
-    
-    jobs:
-      deploy:
-        name: Build, Deploy to S3 bucket
-        runs-on: [ubuntu-latest]
-    
-        strategy:
-          matrix:
-            node-version: [20.10.0]
-    
-        steps:
-          - uses: actions/checkout@v2
-    
-          - name: Use Node.js ${{ matrix.node-version }}
-            uses: actions/setup-node@v1
-            with:
-              node-version: ${{ matrix.node-version }}
-    
-          - name: pnpm install
-            run: pnpm install
-    
-          - name: Build
-            run: pnpm build
-    
-          - name: Transfer to S3 for serving static
-            uses: jakejarvis/s3-sync-action@main
-            with:
-              args: --acl public-read --follow-symlinks --delete
-            env:
-              AWS_S3_BUCKET: sorin-github-action-test1
-              AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-              AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-              AWS_REGION: ${{ AWS_REGION }}
-              SOURCE_DIR: 'dist'
+name: Deploy
+
+on:
+  push:
+    branches:
+      - main
+
+jobs:
+  deploy:
+    name: Build, Deploy to S3 bucket
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [20.9.0]
+
+    steps:
+      - name: Checkout Source
+        uses: actions/checkout@v3
+
+      - name: Use Node.js 20
+        uses: actions/setup-node@v2
+        with:
+          node-version: "20"
+
+      - name: pnpm install
+        run: pnpm install
+
+      - name: Build
+        run: pnpm build
+
+      - name: Transfer to S3 for serving static
+        uses: jakejarvis/s3-sync-action@main
+        with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: sorin-github-action-test1
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ AWS_REGION }}
+          SOURCE_DIR: "build"
