--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,5 +33,5 @@ jobs:
           AWS_S3_BUCKET: sorin-github-action-test1
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ AWS_REGION }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
           SOURCE_DIR: "build"
