--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,12 +26,11 @@ jobs:
         run: pnpm build
 
       - name: Transfer to S3 for serving static
-        uses: jakejarvis/s3-sync-action@main
+        uses: sorin44/s3-sync-action@main
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
-          AWS_S3_BUCKET: sorin-github-action-test1
+          AWS_S3_BUCKET: sorin-github-action-test
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: "build"
