--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
         run: pnpm build
 
       - name: Transfer to S3 for serving static
-        uses: sorin44/s3-sync-action@main
+        uses: sorin44/github-action-test-react@main
         with:
           args: --acl public-read --follow-symlinks --delete
         env:
