--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,9 @@ jobs:
         with:
           node-version: "20"
 
+      - name: npm install -g pnpm
+        run: npm install -g pnpm
+
       - name: pnpm install
         run: pnpm install
 
