--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,10 +28,20 @@ jobs:
       - name: Build
         run: pnpm build
 
-      - name: Transfer to S3 for serving static
-        uses: sorin0404/github-action-test-react@main
-        with:
-          args: --acl public-read --follow-symlinks --delete
+      - name: Make build.zip file
+        run: zip -r build.zip ./dist/*
+
+      - name: Make zip file
+        run: zip -r build.zip ./build.zip ./appspec.yml ./scripts.deploy.sh
+
+      - name: Upload to S3
+        run: aws s3 cp build.zip s3://${{ env.AWS_S3_BUCKET }}/build.zip
+
+        # - name: Transfer to S3 for serving static
+        #   uses: sorin0404/github-action-test-react@main
+        #   with:
+        #     args: --acl public-read --follow-symlinks --delete
+
         env:
           AWS_S3_BUCKET: sorin-github-action-test
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
