--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,6 +42,13 @@ jobs:
       - name: Make zip file
         run: zip -r build.zip ./build.zip ./appspec.yml ./scripts.deploy.sh
 
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Upload to S3
         run: aws s3 cp build.zip s3://${{ env.AWS_S3_BUCKET }}/build.zip
 
