--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,6 @@ jobs:
         run: |
           aws deploy create-deployment \
           --application-name $CODEDEPLOY_APPLICATION \
-          --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=build.zip \
+          --s3-location bucket=${{ env.AWS_S3_BUCKET }},bundleType=zip,key=build.zip \
           --deployment-group-name $CODEDEPLOY_GROUP \
           --file-exists-behavior OVERWRITE
