--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Deploy to CodeDeploy
         run: |
           aws deploy create-deployment \
-          --application-name $CODEDEPLOY_APPLICATION \
+          --application-name ${{ env.CODEDEPLOY_APPLICATION }} \
           --s3-location bucket=${{ env.AWS_S3_BUCKET }},bundleType=zip,key=build.zip \
-          --deployment-group-name $CODEDEPLOY_GROUP \
+          --deployment-group-name ${{ env.CODEDEPLOY_GROUP }} \
           --file-exists-behavior OVERWRITE
