--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,7 @@ on:
 
 env:
   AWS_S3_BUCKET: sorin-github-action-test
-  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  AWS_REGION: ${{ secrets.AWS_REGION }}
+  AWS_REGION: ap-northeast-2
   CODEDEPLOY_APPLICATION: sorin-github-action-test
   CODEDEPLOY_GROUP: sorin-github-action-test-group
 
