--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         run: zip -r build.zip ./dist/*
 
       - name: Make zip file
-        run: zip -r build.zip ./build.zip ./appspec.yml ./scripts.deploy.sh
+        run: zip -r build.zip ./build.zip ./appspec.yml ./scripts/deploy.sh
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
